--- a/css/generic/all.less
+++ b/css/generic/all.less
@@ -165,6 +165,7 @@ body {
 					top:17px;
 					width: 37px;
 					height: 37px;
+					display: none;	
 					
 					// circle frame
 					.frame {
